--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "animate.css": "^4.1.1",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-to-print": "^3.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
